Remove : MVC 모드의 공통 예외로직 제거 Fix : 게이트웨이 라우팅 경로 변경
추후 비동기 어플리케이션에 적용 가능한 공통예외로직 적용 예정

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -11,12 +11,18 @@ eureka:
     service-url:
       defaultZone: http://localhost:8760/franc/discovery/eureka #Eureka Server 명시
 
+
+
+
+
 logging:
   level:
     root: INFO
     com.zaxxer.hikari.pool.HikariPool: INFO
     org:
       springframework:
+        cloud:
+          gateway: DEBUG
         boot:
           autoconfigure: ERROR
     jdbc:
