Fix : 전역필터, 사용자정의 필터 수정
전역필터 : 요청/응답을 가로채서 로그를 남긴다.
사용자정의 필터 : 요청/응답을 가로채서 임의 헤더를 추가한다.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,10 +30,6 @@ spring:
     gateway:
       default-filters:
         - name: GlobalFilter
-          args:
-            baseMessage: Spring Cloud Gateway GlobalFilter
-            preLogger: true
-            postLogger: true
       routes:
         - id: franc-user
           uri: lb://FRANC-USER
@@ -42,9 +38,11 @@ spring:
           filters:
             - name: CustomFilter
               args:
-                baseMessage: CustomFilter target!!
-                preLogger: true
-                postLogger: true
+                requestHeader: CustomFilter Start!
+                responseHeader : CustomFilter Finish!
+                canRequestHeader: true
+                canResponseHeader: true
+
 #        - id: franc-order
 #          uri: lb://FRANC-ORDER
 #          predicates:
